--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "supplier",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "Glue for Node.js modules",
     "homepage": "https://github.com/rithis/supplier",
     "bugs": {
@@ -29,7 +29,8 @@
         "stylus": "~0.32",
         "nib": "~0.9",
         "rithis-crud": "~0.0",
-        "express": "~3.1"
+        "express": "~3.1",
+        "mongoose": "~3.4"
     },
     "engines": {
         "node": "~0.8",
