--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
         "url": "git://github.com/rithis/supplier.git"
     },
     "scripts": {
-        "test": "mocha --compilers coffee:coffee-script --reporter spec"
+        "test": "make test"
     },
     "dependencies": {
+        "mocha": "~1.8",
+        "coffee-script": "~1.4",
+        "coffee-coverage": "~0.0",
+
         "async": "~0.2",
         "fs.extra": "~1.2",
         "bower": "~0.7",
