--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 
         "async": "~0.2",
         "fs.extra": "~1.2",
+        "colors": "~0.6",
         "bower": "~0.7",
         "connect-coffee-script": "~0.1",
         "stylus-responsive": "~0.0",
