--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         "nib": "~0.9",
         "rithis-crud": "~0.0",
         "express": "~3.1",
-        "mongoose": "~3.5"
+        "mongoose": "~3.5",
+        "expires": "~0.0",
+        "json-output": "~0.0",
+        "supertest": "~0.5"
     },
     "engines": {
         "node": "~0.8",
