--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "nib": "~0.9",
         "rithis-crud": "~0.0",
         "express": "~3.1",
-        "mongoose": "~3.5"
+        "mongoose": "~3.5",
+        "supertest": "~0.5",
+        "fileupload": "~0.2"
     },
     "engines": {
         "node": "~0.8",
