--- a/package.json
+++ b/package.json
@@ -17,18 +17,11 @@
         "url": "git://github.com/rithis/supplier.git"
     },
     "scripts": {
-        "test": "make test"
+        "test": "./node_modules/.bin/grunt test"
     },
     "dependencies": {
-        "mocha": "~1.8",
-        "supertest": "~0.5",
         "coffee-script": "~1.4",
-        "coffee-coverage": "~0.0",
-        "coffeelint": "~0.5",
-        "docco": "~0.4",
-
         "async": "~0.2",
-        "fs.extra": "~1.2",
         "colors": "~0.6",
         "connect-coffee-script": "~0.1",
         "stylus-responsive": "~0.0",
@@ -41,6 +34,18 @@
         "express": "~3.1",
         "fileupload": "~0.2",
         "mongoose": "~3.5"
+    },
+    "devDependencies": {
+        "supertest": "~0.5",
+        "fs.extra": "~1.2",
+        "html-file-cov": "~0.0",
+        "grunt": "~0.4",
+        "grunt-cli": "~0.1",
+        "grunt-contrib-clean": "~0.4",
+        "grunt-simple-mocha": "~0.3",
+        "grunt-coffee-coverage": "~0.1",
+        "grunt-coffeelint": "~0.0",
+        "grunt-docco": "~0.2"
     },
     "engines": {
         "node": "~0.8",
