--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "coffee-script": "~1.5",
         "async": "~0.2",
         "colors": "~0.6",
+        "shelljs": "~0.1",
+        "npm": "~1.2",
+        "semver": "~1.1",
         "connect-coffee-script": "~0.1",
         "stylus-responsive": "~0.0",
         "jade-static": "git://github.com/vslinko/jade-static.git#patch-1",
@@ -33,10 +36,7 @@
         "rithis-crud": "~0.0",
         "express": "~3.1",
         "fileupload": "~0.2",
-        "mongoose": "~3.5",
-        "commander": "~1.1",
-        "mkdirp": "~0.3",
-        "npm": ""
+        "mongoose": "~3.5"
     },
     "devDependencies": {
         "supertest": "~0.5",
