--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 docs
+examples/assets/public/*.css
+examples/assets/public/*.js
+examples/bower/components
+examples/bower/.components
+examples/uploads/uploads
 lib-cov
 node_modules
 test/public/style.css
