--- a/package.json
+++ b/package.json
@@ -24,22 +24,10 @@
     "async": "~0.2",
     "colors": "~0.6",
     "sinon": "~1.6",
-    "supertest": "~0.5",
-    "connect-coffee-script": "~0.1",
-    "stylus-responsive": "~0.0",
-    "jade-static": "git://github.com/vslinko/jade-static.git#patch-1",
-    "stylus": "~0.32",
-    "nib": "~0.9",
-    "ms": "~0.6",
-    "bower": "~0.8",
-    "cruder": "~0.1",
-    "express": "~3.1",
-    "fileupload": "~0.2",
-    "mongoose": "~3.5"
+    "supertest": "~0.5"
   },
   "devDependencies": {
     "should": "~1.2",
-    "fs.extra": "~1.2",
     "html-file-cov": "~0.0",
     "grunt": "~0.4",
     "grunt-cli": "~0.1",
