--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   }
 , "dependencies": {
     "async": "~0.2"
-  , "colors": "~0.6"
+  , "cli-color": "~0.2"
   }
 , "devDependencies": {
     "chai": "~1.5"
