--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "grunt simplemocha"
   }
 , "dependencies": {
-    "async": "~0.2"
-  , "kantaina": "~0.1"
+    "kantaina": "~0.1"
   , "when": "~2.1"
   }
 , "devDependencies": {
