--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "symfio"
-, "version": "1.0.2"
+, "version": "2.0.0-alpha"
 , "description": "Modular framework based on Node.js and AngularJS."
 , "homepage": "http://symf.io"
 , "bugs": {
