--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "symfio"
 , "version": "2.0.0-beta.2"
-, "description": "Modular framework based on Node.js and AngularJS."
+, "description": "Modular framework based on Node.js and kantaina."
 , "homepage": "http://symf.io"
 , "bugs": {
     "url": "https://github.com/symfio/symfio/issues"
@@ -20,14 +20,12 @@
     "test": "npm install && grunt"
   }
 , "dependencies": {
-    "kantaina": "~0.1"
-  , "when": "~2.1"
+    "kantaina": "~1.1"
+  , "when": "~2.2"
   }
 , "devDependencies": {
-    "chai": "~1.6"
+    "chai": "~1.7"
   , "chai-as-promised": "~3.3"
-  , "sinon": "~1.7"
-  , "sinon-chai": "~2.4"
   , "grunt": "~0.4"
   , "grunt-simple-mocha": "~0.4"
   , "grunt-coffeelint": "~0.0"
