--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "symfio"
-, "version": "2.0.0-beta.2"
+, "version": "2.0.0"
 , "description": "Modular framework based on Node.js and kantaina."
 , "homepage": "http://symf.io"
 , "bugs": {
