--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   , "grunt": "~0.4"
   , "grunt-simple-mocha": "~0.4"
   , "grunt-coffeelint": "~0.0"
+  , "grunt-contrib-watch": "~0.4"
+  , "grunt-coffee-coverage": "~0.1"
+  , "grunt-contrib-clean": "~0.4"
+  , "travis-cov": "~0.2"
+  , "mocha-lcov-reporter": "~0.0"
   }
 , "engines": {
     "node": ">=0.8"
